k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maison-epouvante-front
  namespace: maison-epouvante-front
spec:
  selector:
    app: maison-epouvante-front
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
